--- a/nulab-ocr-report.tex
+++ b/nulab-ocr-report.tex
@@ -307,51 +307,69 @@ Since most currently developed OCR systems now transcribe entire lines, inferrin
 
 Analogously to the experience of researchers in MT, it is thus an empirical question how close the alignment between transcription and page image should be for effective OCR training. As we stated above, alignment at the line level is often sufficient with current models. What remains to be determined, however, is how much of the variation within a line needs to be documented. Do transcriptions used for ground truth need to distinguish bold and italics, small capitals, black letter and roman type, and other font changes? Do these transcripts need to distinguish between text on different baselines, one- vs. two-character columns in Chinese, or justification connectors in cursive scripts such as Arabic? Do these transcripts need to distinguish variant forms of characters, such as long and short s, or the use of similar Unicode glyphs?
 
-More uncertainty is introduced into the alignment process by complex layouts (see recommendation #2 above). Different editions employ different conventions for marking elements that break up a continuous flow of lines such as footnotes, column breaks, headers, marginalia, and figures.
+More uncertainty is introduced into the alignment process by complex layouts (see recommendation \#2 above). Different editions employ different conventions for marking elements that break up a continuous flow of lines such as footnotes, column breaks, headers, marginalia, and figures.
 
 During the period of this study, we performed some pilot experiments on creating OCR ground-truth data from hand-transcribed editions and baseline OCR systems. Using transcriptions of the Richmond (Virginia) Daily Dispatch and the Text Creation Partnership, we extracted 2.2 million lines and 8.6 million lines of aligned OCR and manual transcripts, respectively. For details about the method and results, see Appendix~\ref{app:eval}.
 
-\paragraph{Next steps:} We propose that significant progress can be made on generating new training and evaluation corpora for OCR if funders in language technologies, library and information science, and the humanities would make:</span><ul class="c23 lst-kix_phrotlzg6oxp-0 start"><li class="c0 c12"><span class="c2">one or two small grants to textual scholars and NLP researchers to build collections of manual transcriptions, images, and baseline OCR and to align the manual transcriptions, most likely via the baseline OCR, to the images.</span></li></ul>
+\paragraph{Next steps:} We propose that significant progress can be made on generating new training and evaluation corpora for OCR if funders in language technologies, library and information science, and the humanities would make:
+\begin{itemize}
 
-<p class="c6"><span class="c2">This team could also coordinate with communities in textual editing and crowdsourced transcription (see recommendation #4) to develop standards harmonizing the transcription standards in several historical languages.</span><h3 class="c10" id="h.82myxvah93d"><span class="c19">4. Develop a reusable contribution system for OCR ground truth</span></h3>
+\item one or two small grants to textual scholars and NLP researchers to build collections of manual transcriptions, images, and baseline OCR and to align the manual transcriptions, most likely via the baseline OCR, to the images.
+  
+\end{itemize}
 
-<p class="c6"><span class="c13">Addressed to:</span><span class="c2">&nbsp;Managers of large digitization projects; experts in crowdsourcing, citizen scholarship, and public humanities; teachers of documentary editing; funders in museum and library science and in the humanities.</span>
+This team could also coordinate with communities in textual editing and crowdsourced transcription (see recommendation \#4) to develop standards harmonizing the transcription standards in several historical languages.
 
-<p class="c6"><span class="c13">Recommendations</span><span class="c13">:</span><span class="c2">&nbsp;Developers associated with cultural heritage institutions and other public humanities organizations, assisted by experts in crowdsourcing and citizen scholarship, should build and maintain reusable tools and formats for creating transcriptions linked to images; tools should support both casual crowdsourcing and production of machine-readable editions as part of humanities education; standards would encourage projects to provide data in a form useful for OCR training.</span>
+\subsection{4. Develop a reusable contribution system for OCR ground truth}
+\label{sec:rec-contribution}
 
-\paragraph{Recommendation narrative:}
+\paragraph{Addressed to:} Managers of large digitization projects; experts in crowdsourcing, citizen scholarship, and public humanities; teachers of documentary editing; funders in museum and library science and in the humanities.</span>
 
-<p class="c6"><span>As noted in the previous recommendation, in the past decades a large number of transcription and encoding projects have been developed in humanistic disciplines, many cohering around the Text Encoding Initiative (TEI) standard for markup of historical and literary texts. These include some of the most long-standing projects in the digital humanities, such as the </span><span class="c9">\emph{Women Writers Project} at Northeastern University and the </span><span class="c9">\emph{Perseus Digital Library} at Tufts. The research teams organizing these projects have largely focused on manual transcription and detailed tagging in order to capture their corpora's precise details and mark their formal, linguistic, or thematic features, but for the most part these transcriptions are not immediately useful for OCR training (see recommendation #3 above on exploiting existing digital editions</span><span class="c2">). However, these communities are nonetheless interested in advances in automatic transcription methods and are often committed to principles of open scholarly data. Similar research groups in the future could create transcriptions more immediately useful as OCR training data in their scholarly domain, if systems or tools for making such contributions existed and were simple to incorporate into existing workflows. Alternatively, such tools might assist researchers in creating a version of their data optimized for OCR training, so that it could be more easily repurposed by OCR researchers.</span>
-
-<p class="c6"><span>Most importantly, transcription tools would help link transcribed texts to their source images---not the ideal version of a given text, but the specific edition used for the transcription---and to automatically zone the source images based on the transcriptions.&nbsp;This last step would represent the biggest improvement for OCR research, as most current transcriptions created for web publications are not mapped to page images in ways that would facilitate OCR system training. Advising transcribers, for example, to reassemble words hyphenated across those breaks, facilitates search but adds another complication to OCR training. Since most state-of-the-art OCR models are trained by the line, instead of by the isolated word or character, aligning transcription to image need not be too onerous---and line-level alignment would be more appropriate for connected scripts (e.g., Arabic) and manuscript hands than word- or character-level alignments. By linking zoned images to human transcriptions created through projects centered on various genres, time periods, languages, or regions, this tool would provide reliable training data for OCR researchers in a much wider range of domains than is currently available, and make it much easier to bootstrap OCR research for narrower domains.</span>
-
-<p class="c6"><span>Many OCR projects we surveyed---including the OpenITI, the Chinese Text Project, the Lace Greek OCR project, the Transkribus handwriting recognition project, and the Australian National Library's Trove project---saw creating front-ends for OCR transcription as a vital part of their work. The Library of Congress also recently (October, 2018) released a platform for crowdsourced transcription (</span><span class="c1"><a class="c4" href="https://www.google.com/url?q=https://crowd.loc.gov&amp;sa=D&amp;ust=1542739736277000">https://crowd.loc.gov</a></span><span class="c2">). In part, this fragmentation simply reflects the needs of community building: the set of people interested in transcribing Arabic books is different from the set of people interested in transcribing the papers of Jeremy Bentham. Nevertheless, the work in building a robust tool linking transcription and image with an archival storage layer is non-trivial, and projects need to consider whether community transcription is cost-effective (Causer et al., 2018).</span>
-
-<p class="c6"><span>One potential model that came up during our interviews and discussions was the explicit teaching of documentary editing&nbsp;to encourage students in history, literature,&nbsp;and other disciplines</span><span class="c2">, to make transcription, along with interpretation, of historical sources part of a citable, intellectual contribution to knowledge. For manuscripts, this model has worked with great success in the Homer Multitext Project, where undergraduates at several institutions have produced an edition of the Homeric scholia (marginal commentaries) much more complete than previous printed editions. SourceLab, a platform for students to create documentary editions proposed by John Randolph and colleagues (Randolph, 2017), is another interesting model. These examples of student-created editions provide an interesting alternative to more casual crowdsourcing, where individual contributions are harder to extract. In addition, projects producing documentary editions, such as manuscript transcriptions, could be encouraged to think about making their output useful and available for training OCR systems as part of their (often open-access) data management requirements.</span>
-
-\paragraph{Next steps:} We propose in the short term that funders in museum and library science and in the humanities prioritize:</span><ul class="c23 lst-kix_oxp01wtq4ujp-0 start"><li class="c0 c12"><span class="c2">a medium grant to a cultural-heritage institution or other organization undertaking large-scale digitization to build reusable tools for image-linked OCR transcription or to make existing tools customizable by different transcription communities; and</span></li><li class="c0 c12"><span>a small grant to textual scholars teaching documentary editing to integrate manual transcription, OCR, and archival publication of the resulting editions into undergraduate and graduate courses.</span></li></ul><h3 class="c10" id="h.fopjvuw327tv"><span class="c19">5. Develop model adaptation and search for comparable training sets</span></h3>
-
-<p class="c6"><span class="c13">Addressed to:</span><span class="c2">&nbsp;Machine-learning researchers; managers of large digitization projects; funders interested in supporting efficient large-scale digitization and in domain adaptation for machine learning.</span>
-
-<p class="c6"><span class="c13">Recommendations</span><span class="c13">:</span><span class="c2">&nbsp;Researchers should develop offline training and online adaptation methods to exploit existing annotated data; managers of large digitization projects should prioritize collection of training data by measuring performance on the collection as a whole.</span>
+\paragraph{Recommendations:} Developers associated with cultural heritage institutions and other public humanities organizations, assisted by experts in crowdsourcing and citizen scholarship, should build and maintain reusable tools and formats for creating transcriptions linked to images; tools should support both casual crowdsourcing and production of machine-readable editions as part of humanities education; standards would encourage projects to provide data in a form useful for OCR training.
 
 \paragraph{Recommendation narrative:}
 
-<p class="c6"><span class="c2">Many digitization projects, from the individual scholar to large library deployments, use a single, often commercial, OCR system. These systems often have a few pre-trained font models but otherwise do not adapt to the wide range of character forms found in historical and multilingual data. The variation among different manuscript hands is even greater.</span>
+As noted in the previous recommendation, in the past decades a large number of transcription and encoding projects have been developed in humanistic disciplines, many cohering around the Text Encoding Initiative (TEI) standard for markup of historical and literary texts. These include some of the most long-standing projects in the digital humanities, such as the \emph{Women Writers Project} at Northeastern University and the \emph{Perseus Digital Library} at Tufts. The research teams organizing these projects have largely focused on manual transcription and detailed tagging in order to capture their corpora's precise details and mark their formal, linguistic, or thematic features, but for the most part these transcriptions are not immediately useful for OCR training (see recommendation \#3 above on exploiting existing digital editions). However, these communities are nonetheless interested in advances in automatic transcription methods and are often committed to principles of open scholarly data. Similar research groups in the future could create transcriptions more immediately useful as OCR training data in their scholarly domain, if systems or tools for making such contributions existed and were simple to incorporate into existing workflows. Alternatively, such tools might assist researchers in creating a version of their data optimized for OCR training, so that it could be more easily repurposed by OCR researchers.
 
-<p class="c6"><span class="c2">Especially with the greater availability of open-source OCR software, scholars interested in transcribing historical materials are now frequently training models specifically for their tasks. By acquiring appropriate training data, sometimes as little as a few pages, scholars are able to achieve better transcription accuracy than they could with pre-trained models. In the two previous recommendations in this report, we address the issues of easing the transcription of ground-truth data and exploiting existing editions for ground-truth data.</span>
+Most importantly, transcription tools would help link transcribed texts to their source images---not the ideal version of a given text, but the specific edition used for the transcription---and to automatically zone the source images based on the transcriptions.  This last step would represent the biggest improvement for OCR research, as most current transcriptions created for web publications are not mapped to page images in ways that would facilitate OCR system training. Advising transcribers, for example, to reassemble words hyphenated across those breaks, facilitates search but adds another complication to OCR training. Since most state-of-the-art OCR models are trained by the line, instead of by the isolated word or character, aligning transcription to image need not be too onerous---and line-level alignment would be more appropriate for connected scripts (e.g., Arabic) and manuscript hands than word- or character-level alignments. By linking zoned images to human transcriptions created through projects centered on various genres, time periods, languages, or regions, this tool would provide reliable training data for OCR researchers in a much wider range of domains than is currently available, and make it much easier to bootstrap OCR research for narrower domains.
 
-<p class="c6"><span>Some OCR projects are large and diverse enough, however, that it is difficult to know ahead of time what training data would be required. On the other hand, it is possible that sufficiently close training data might be already available. We therefore propose that research on automatically adapting models trained on existing data to documents in a new collection and, specifically, on searching existing collections for similar training data would provide substantial benefit to historical and multilingual OCR.</span><span class="c2">&nbsp;Such research on model selection and adaptation would require the compilation of existing training sets (see above) and would be facilitated by the collection and deployment of trained models in an OCR ``service bureau'' (see below).</span>
+Many OCR projects we surveyed---including the OpenITI, the Chinese Text Project, the Lace Greek OCR project, the Transkribus handwriting recognition project, and the Australian National Library's Trove project---saw creating front-ends for OCR transcription as a vital part of their work. The Library of Congress also recently (October, 2018) released a platform for crowdsourced transcription (\url{https://crowd.loc.gov}). In part, this fragmentation simply reflects the needs of community building: the set of people interested in transcribing Arabic books is different from the set of people interested in transcribing the papers of Jeremy Bentham. Nevertheless, the work in building a robust tool linking transcription and image with an archival storage layer is non-trivial, and projects need to consider whether community transcription is cost-effective (Causer et al., 2018).
 
-<p class="c6"><span>The OpenITI project's work on Kraken (Kiessling et al., 2017) found that for Arabic OCR, transcribing on the order of 1000 lines in the appropriate font could improve accuracy beyond models trained on other fonts.&nbsp;The eMOP</span><span class="c2">&nbsp;project, led by Laura Mandel at Texas A&amp;M, also worked on publisher- and font-specific models for early modern books in Latin scripts. The Lace OCR project for ancient Greek, headed by Bruce Robertson, found that training models for each of the major publishers for Greek texts (Oxford, Teubner, Bud&eacute;, etc.) was particularly useful. In fact, Lace runs every model on each book and selects the results after the fact by computing unsupervised evaluation metrics. This procedure might be too computationally intensive for some mass digitization projects or when there are significantly more models, but the results are suggestive. The Ocular OCR system (Berg-Kirkpatrick et al., 2013; Garrette et al., 2015), by performing unsupervised learning on individual books, takes this process even farther, although building hierarchical models that could pool evidence from multiple books might be beneficial.</span>
+One potential model that came up during our interviews and discussions was the explicit teaching of documentary editing to encourage students in history, literature, and other disciplines, to make transcription, along with interpretation, of historical sources part of a citable, intellectual contribution to knowledge. For manuscripts, this model has worked with great success in the Homer Multitext Project, where undergraduates at several institutions have produced an edition of the Homeric scholia (marginal commentaries) much more complete than previous printed editions. SourceLab, a platform for students to create documentary editions proposed by John Randolph and colleagues (Randolph, 2017), is another interesting model. These examples of student-created editions provide an interesting alternative to more casual crowdsourcing, where individual contributions are harder to extract. In addition, projects producing documentary editions, such as manuscript transcriptions, could be encouraged to think about making their output useful and available for training OCR systems as part of their (often open-access) data management requirements.
 
-<p class="c6"><span>The fundamental problem, therefore, when training an OCR model for a particular book or manuscript is efficiently incorporating training data from other projects. Matching on known metadata attributes, such as publisher, is subject to noise and may ignore relevant sources of information. In newspaper publishing, for example, we have records of the same sets of physical type being sold to other publishers. </span><span class="c2">The relevant question for OCR systems, however, is not how similar two typefaces or hands are to the human eye, or in their lineage, but how useful data and models from one collection are in transcribing another.</span>
+\paragraph{Next steps:} We propose in the short term that funders in museum and library science and in the humanities prioritize:
+\begin{itemize}
 
-<p class="c6"><span>We therefore propose research focused on searching for and incorporating</span><span class="c2">&nbsp;annotated data from multiple sources. In addition, we propose that work on online and offline adaptation of OCR models would greatly expand the robustness of systems for handwriting and print recognition in large, diverse collections, where scholars do not have the resources to produce training data for every hand and font. We expect that a focus on adaptation could help OCR follow the path of automatic speech recognition, where the past two decades have moved from speaker-specific supervised training to more robust, adaptive models embedded in mass-market phones and other appliances. (Speech recognition has not become as general as we would like: many widely-deployed systems still achieve lower accuracy with female speakers and with speakers in a wide variety of common accents.) Offline adaptation methods could be helped by approaches that exploit the similarity structure of large collections (Yalniz et al., 2011) and that allow us to co-train image and language models. Hierarchical models of related typefaces could also connect this work to computational bibliography, e.g., for identifying the printers of anonymous pamphlets (Weingart et al., 2018).</span>
+\item a medium grant to a cultural-heritage institution or other organization undertaking large-scale digitization to build reusable tools for image-linked OCR transcription or to make existing tools customizable by different transcription communities; and
+
+\item a small grant to textual scholars teaching documentary editing to integrate manual transcription, OCR, and archival publication of the resulting editions into undergraduate and graduate courses.
+
+\end{itemize}
+
+\subsection{5. Develop model adaptation and search for comparable training sets}
+\label{sec:rec-adaptation}
+
+\paragraph{Addressed to:} Machine-learning researchers; managers of large digitization projects; funders interested in supporting efficient large-scale digitization and in domain adaptation for machine learning.
+
+\paragraph{Recommendations:} Researchers should develop offline training and online adaptation methods to exploit existing annotated data; managers of large digitization projects should prioritize collection of training data by measuring performance on the collection as a whole.
+
+\paragraph{Recommendation narrative:}
+
+Many digitization projects, from the individual scholar to large library deployments, use a single, often commercial, OCR system. These systems often have a few pre-trained font models but otherwise do not adapt to the wide range of character forms found in historical and multilingual data. The variation among different manuscript hands is even greater.
+
+Especially with the greater availability of open-source OCR software, scholars interested in transcribing historical materials are now frequently training models specifically for their tasks. By acquiring appropriate training data, sometimes as little as a few pages, scholars are able to achieve better transcription accuracy than they could with pre-trained models. In the two previous recommendations in this report, we address the issues of easing the transcription of ground-truth data and exploiting existing editions for ground-truth data.
+
+Some OCR projects are large and diverse enough, however, that it is difficult to know ahead of time what training data would be required. On the other hand, it is possible that sufficiently close training data might be already available. We therefore propose that research on automatically adapting models trained on existing data to documents in a new collection and, specifically, on searching existing collections for similar training data would provide substantial benefit to historical and multilingual OCR. Such research on model selection and adaptation would require the compilation of existing training sets (see above) and would be facilitated by the collection and deployment of trained models in an OCR ``service bureau'' (see Recommendation \#9).
+
+The OpenITI project's work on Kraken (Kiessling et al., 2017) found that for Arabic OCR, transcribing on the order of 1000 lines in the appropriate font could improve accuracy beyond models trained on other fonts.  The eMOP project, led by Laura Mandel at Texas A\&M, also worked on publisher- and font-specific models for early modern books in Latin scripts. The Lace OCR project for ancient Greek, headed by Bruce Robertson, found that training models for each of the major publishers for Greek texts (Oxford, Teubner, Budé, etc.) was particularly useful. In fact, Lace runs every model on each book and selects the results after the fact by computing unsupervised evaluation metrics. This procedure might be too computationally intensive for some mass digitization projects or when there are significantly more models, but the results are suggestive. The Ocular OCR system (Berg-Kirkpatrick et al., 2013; Garrette et al., 2015), by performing unsupervised learning on individual books, takes this process even farther, although building hierarchical models that could pool evidence from multiple books might be beneficial.
+
+The fundamental problem, therefore, when training an OCR model for a particular book or manuscript is efficiently incorporating training data from other projects. Matching on known metadata attributes, such as publisher, is subject to noise and may ignore relevant sources of information. In newspaper publishing, for example, we have records of the same sets of physical type being sold to other publishers. The relevant question for OCR systems, however, is not how similar two typefaces or hands are to the human eye, or in their lineage, but how useful data and models from one collection are in transcribing another.
+
+We therefore propose research focused on searching for and incorporating annotated data from multiple sources. In addition, we propose that work on online and offline adaptation of OCR models would greatly expand the robustness of systems for handwriting and print recognition in large, diverse collections, where scholars do not have the resources to produce training data for every hand and font. We expect that a focus on adaptation could help OCR follow the path of automatic speech recognition, where the past two decades have moved from speaker-specific supervised training to more robust, adaptive models embedded in mass-market phones and other appliances. (Speech recognition has not become as general as we would like: many widely-deployed systems still achieve lower accuracy with female speakers and with speakers in a wide variety of common accents.) Offline adaptation methods could be helped by approaches that exploit the similarity structure of large collections (Yalniz et al., 2011) and that allow us to co-train image and language models. Hierarchical models of related typefaces could also connect this work to computational bibliography, e.g., for identifying the printers of anonymous pamphlets (Weingart et al., 2018).
 
 \paragraph{Next steps:} We propose that funders interested in supporting efficient large-scale digitization and in domain adaptation for machine learning could make progress on these recommendations with:</span><ul class="c23 lst-kix_94ljon4sa1xa-0 start"><li class="c0 c12"><span class="c2">one or two small grants to research teams focused on particular scripts, periods, or genres with poor OCR coverage to perform quantitative evaluations on domain adaptation and to develop plans for large-scale digitization; and</span></li><li class="c0 c12"><span>a medium grant to a team focused on OCR research to leverage large-scale corpora with supervised and unsupervised domain adaptation.</span></li></ul><h3 class="c10" id="h.aj7xb63fii1a"><span>6. Train and test OCR on linguistically diverse texts</span></h3>
 
-<p class="c6"><span class="c13">Addressed to:</span><span class="c2">&nbsp;NLP and OCR researchers and system developers; funders interested in language technologies for low-resource languages and code-switching and in digitization of underserved historical languages.</span>
+\paragraph{Addressed to:} NLP and OCR researchers and system developers; funders interested in language technologies for low-resource languages and code-switching and in digitization of underserved historical languages.</span>
 
 <p class="c6"><span class="c13">Recommendations:</span><span class="c2">&nbsp;Language technology researchers should create datasets with significant language variation and mixtures of languages and scripts; OCR researchers should build structured models to leverage sparse data; researchers should experiment with precision-recall tradeoffs for rare, embedded languages.</span>
 
@@ -367,7 +385,7 @@ During the period of this study, we performed some pilot experiments on creating
 
 \paragraph{Next steps:} We propose that funders interested in language technologies for low-resource languages and code-switching and in digitization of underserved historical languages should support:</span><ul class="c23 lst-kix_mji2atyqhues-0 start"><li class="c0 c12"><span class="c2">one or two small grants to develop evaluation corpora reflecting the complex mixtures of languages and range of historical variation in many historical sources, to make sure that OCR systems can be evaluated on these tasks; and</span></li><li class="c0 c12"><span class="c2">the possibility of further small or medium grants to build new models that adapt and perform well on the variation and code-switching or historical texts.</span></li></ul><h3 class="c10" id="h.m8lek8edz0ln"><span>7. Convene OCR Institutes in Critical Research Areas</span></h3>
 
-<p class="c6"><span class="c13">Addressed to:</span><span class="c2">&nbsp;Libraries and other centers for mass digitization; researchers; funders interested in catalyzing progress on OCR for a particular language or domain.</span>
+\paragraph{Addressed to:} Libraries and other centers for mass digitization; researchers; funders interested in catalyzing progress on OCR for a particular language or domain.</span>
 
 \paragraph{Recommendations:} Funders should convene an OCR Institutes Board to identify potential humanities domains, as well as potential participants, to form OCR Institute(s) that will focus on advancing OCR rapidly for a given domain. Grants should be developed to fund OCR Institutes that will offer grants for concerted, collaborative research in identified domains; transcribe sufficient documents for training; and train specialized domain OCR models.</span>
 
@@ -383,7 +401,7 @@ During the period of this study, we performed some pilot experiments on creating
 
 \paragraph{Next steps:} We propose that funders interested in catalyzing progress on OCR for a particular language or domain should support:</span><ul class="c23 lst-kix_kz690d57ed3a-0 start"><li class="c0 c12"><span class="c2">a small grant to convene an OCR Institutes Board to identify potential humanities domains and participants to form OCR Institute(s) that will focus on advancing OCR rapidly for a given domain; and</span></li><li class="c0 c12"><span class="c2">medium or large grants as appropriate teams apply to host and run OCR Institutes.</span></li></ul><h3 class="c10" id="h.71q9hvojka8g"><span>8. Create an OCR assessment toolkit for cultural heritage institutions</span></h3>
 
-<p class="c6"><span class="c13">Addressed to:</span><span class="c2">&nbsp;Libraries and other curators of repositories of OCR'd documents; funders &nbsp;looking to improve the efficiency and effectiveness of digitization programs in cultural heritage institutions.</span>
+\paragraph{Addressed to:} Libraries and other curators of repositories of OCR'd documents; funders &nbsp;looking to improve the efficiency and effectiveness of digitization programs in cultural heritage institutions.</span>
 
 \paragraph{Recommendations:} Provide funding to a well-known digital library organization (e.g. DLF, CLIR, or ARL) or research library, to undertake the creation of an OCR Assessment Toolkit to help cultural heritage institutions determine when collections need to be re-OCR'd. This creation will involve surveying cultural heritage institutions about current OCR evaluation practices; identifying best practices, developing procedures for technical and financial assessment of re-OCRing existing collections, and determining the desirability and feasibility of automating such evaluation.</span>
 
@@ -397,7 +415,7 @@ During the period of this study, we performed some pilot experiments on creating
 
 \paragraph{Next steps:} We propose that funders looking to improve the efficiency and effectiveness of digitization programs in cultural heritage institutions should support:</span><ul class="c23 lst-kix_przah0cj5xm4-0 start"><li class="c0 c12"><span class="c2">a small grant to a well-known digital library organization (e.g. DLF, CLIR, or ARL) or research library, to undertake the creation of an OCR Assessment Toolkit to help cultural heritage institutions determine when collections need to be re-OCR'd.</span></li></ul><h3 class="c10" id="h.4jbwmynqso07"><span class="c19">9. Establish an ``OCR Service Bureau''</span></h3>
 
-<p class="c6"><span class="c13">Addressed to:</span><span class="c2">&nbsp;Universities; scholarly societies and other non-profit organizations and consortia; funders interested in sustaining historical and multilingual OCR in cultural heritage institutions.</span>
+\paragraph{Addressed to:} Universities; scholarly societies and other non-profit organizations and consortia; funders interested in sustaining historical and multilingual OCR in cultural heritage institutions.</span>
 
 \paragraph{Recommendations:} Funders should recruit library and information science professionals to conduct a formal study toward the establish</span><span class="c2">ment of an OCR Service Bureau. This Bureau, hosted by an established digital library organization or research library, would provide expertise and facilitate collaborations among researchers, libraries, and enterprises; host training and evaluation data; and manage computing resources. This initial study should outline possible economic organizational, and governance models for such a Bureau, including a survey of possible managing organizations.</span>
 
